foundryvtt/ingress_foundryvtt.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foundryvtt
  namespace: foundryvtt
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`foundry.profanitybandits.net`)
    services:
      - name: foundry-vtt
        kind: Service
  tls:
    certResolver: cert-resolver
